<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TicTacToe</string>
    <string name="game_name">Tic Tac Toe</string>
    <string name="single_player">Single Player</string>
    <string name="multi_player">Multiplayer</string>
    <string name="x_character">X</string>
    <string name="o_character">O</string>
    <string name="three_grids">3 by 3</string>
    <string name="five_grids">5 by 5</string>
    <string name="begin_button">Begin</string>
    <string name="player_one">1</string>
    <string name="player_two">2</string>
    <string name="player_computer">C</string>
    <string name="select_player_mode">Select Single or Multiplayer mode</string>
    <string name="x_wins">"X Wins: "</string>
    <string name="x_score">0</string>
    <string name="o_wins">"O Wins: "</string>
    <string name="o_score">0</string>
    <string name="draws">"Draws: "</string>
    <string name="draws_score">0</string>
    <string name="player_wins">"<xliff:g id="player" example="X">%s</xliff:g> wins" </string>
    <string name="draw_game">Game is a draw</string>
    <string name="reset_board">Reset Board</string>
    <string name="reset_game">Reset Game</string>
</resources>
